added auth service, book rest service, books mocks, added new buttons colors and changed book-list

--- a/src/app/modules/books/components/book-info/book-info.component.html
+++ b/src/app/modules/books/components/book-info/book-info.component.html
@@ -8,6 +8,9 @@
       <a href="#" (click)="onClickBookName($event, book.id)"><span class="book-box__title">{{ book.name }}</span></a>
       <span>{{ book.author }}</span>
       <span class="book-box__price"><small>{{ getMoneySymbol() }}</small>{{ book.price }}</span>
+      <app-button color="yellow">
+        Rent this book
+      </app-button>
     </div>
   </div>
 </div>
