--- a/src/app/modules/books/components/books/books.component.html
+++ b/src/app/modules/books/components/books/books.component.html
@@ -1,10 +1,10 @@
 <header>
   <div class="mobile d-sm-flex d-flex d-lg-none d-md-none d-xl-none justify-content-center">
-    <h1 class="title">B<small>oo</small>kS<small>tor</small>e</h1>
+    <app-title class="title" size="large">B<small>oo</small>kS<small>tor</small>e</app-title>
     <app-books-filter></app-books-filter>
   </div>
   <div class="desktop d-none d-md-flex d-lg-flex d-xl-flex">
-    <h1 class="title">B<small>oo</small>kS<small>tor</small>e</h1>
+    <app-title class="title" size="large">B<small>oo</small>kS<small>tor</small>e</app-title>
     <app-books-filter class="filter-bar"></app-books-filter>
     <a href="#" class="sign-out">Sign out</a>
   </div>
