--- a/src/app/modules/books/components/book-list/book-list.component.html
+++ b/src/app/modules/books/components/book-list/book-list.component.html
@@ -5,3 +5,8 @@
     </div>
   </ng-container>
 </div>
+<div class="row">
+  <div class="center">
+    <app-button color="yellow" (click)="onClickMoreBooks()">More Books</app-button>
+  </div>
+</div>
