--- a/src/app/modules/books/components/book-info/book-info.component.scss
+++ b/src/app/modules/books/components/book-info/book-info.component.scss
@@ -1,5 +1,6 @@
 .book {
   border: none;
+  font-size: 13px;
 
   .book-info {
     min-height: 300px;
@@ -18,6 +19,7 @@
 
     .book-box {
       display: flex;
+      min-height: 125px;
       flex-direction: column;
       text-align: center;
       &__title {
@@ -29,7 +31,6 @@
         font-size: 22px;
       }
     }
-
   }
 }
 
