Added books filter, header, list. Created button and input-text

--- a/src/app/modules/auth/components/login-form/login-form.component.html
+++ b/src/app/modules/auth/components/login-form/login-form.component.html
@@ -18,9 +18,9 @@
               </p>
             </app-input-text>
           </div>
+          <app-button class="d-none d-md-block d-lg-block d-xl-block float-right spaced" color="gray" size="normal" type="submit" (click)="onClickLogar()">Logar</app-button>
+          <app-button type="submit" color="gray" class="d-lg-none d-md-none spaced mobile" (click)="onClickLogar()">Logar</app-button>
         </form>
-          <app-button class="d-none d-md-block d-lg-block d-xl-block float-right spaced" size="normal" (click)="onClickLogar()">Logar</app-button>
-          <app-button class="d-lg-none d-md-none spaced" (click)="onClickLogar()">Logar</app-button>
       </div>
     </div>
   </div>
