--- a/src/app/modules/books/components/books-filter/books-filter.component.scss
+++ b/src/app/modules/books/components/books-filter/books-filter.component.scss
@@ -1,14 +1,12 @@
 
-.search-bar {
+.books-search-bar {
   margin-top: 10px;
+}
 
-  .input {
-    color: #343a40;
-    border-color: #343a40;
-
-    &:focus {
-      box-shadow: 0 0 0 0.2rem rgba(52, 58, 64, 0.5);
-    }
+.clear-filters {
+  margin-left: 35%;
+  cursor: pointer;
+  &:hover {
+    text-decoration: underline;
   }
-
 }
