--- a/src/app/modules/books/components/books/books.component.html
+++ b/src/app/modules/books/components/books/books.component.html
@@ -1,13 +1,5 @@
 <header>
-  <div class="mobile d-sm-flex d-flex d-lg-none d-md-none d-xl-none justify-content-center">
-    <app-title class="title" size="large">B<small>oo</small>kS<small>tor</small>e</app-title>
-    <app-books-filter></app-books-filter>
-  </div>
-  <div class="desktop d-none d-md-flex d-lg-flex d-xl-flex">
-    <app-title class="title" size="large">B<small>oo</small>kS<small>tor</small>e</app-title>
-    <app-books-filter class="filter-bar"></app-books-filter>
-    <a href="#" class="sign-out" (click)="onClickSignout($event)">Sign out</a>
-  </div>
+  <app-book-header></app-book-header>
 </header>
 <main>
   <app-book-list></app-book-list>
