--- a/src/app/modules/shared/components/button/button.component.html
+++ b/src/app/modules/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
-<button type="type" class="btn" [ngClass]="[color, size]">
+<button [type]="type" class="btn" [ngClass]="[color, size]">
   <ng-content></ng-content>
 </button>
